--- a/downloadableProject/src/App.css
+++ b/downloadableProject/src/App.css
@@ -1,16 +1,17 @@
 .bgstyle {
   background: linear-gradient(
     136deg,
-    #4484ce,
+    #ff1744,
     #1ad7c0,
     #ff9b11,
     #9b59b6,
     #ff7f7f,
-    #4285f4,
     #db4437,
     #f4b400,
     #0f9d58,
-    #6441a5
+    #6441a5,
+    #c2185b,
+    #009688
   );
 
   background-size: 1200% 1200%;
