--- a/downloadableProject/src/App.css
+++ b/downloadableProject/src/App.css
@@ -2,16 +2,15 @@
   background: linear-gradient(
     136deg,
     #ff1744,
-    #1ad7c0,
     #ff9b11,
     #9b59b6,
     #ff7f7f,
+    #ffccbc,
     #db4437,
     #f4b400,
     #0f9d58,
-    #6441a5,
-    #c2185b,
-    #009688
+    #2196f3,
+    #6441a5
   );
 
   background-size: 1200% 1200%;
